# regexsolver

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: my_benchmark.rs
src/: execution_profile.rs  lib.rs
src/cardinality/: mod.rs
src/condition/: mod.rs
src/error/: mod.rs
src/fast_automaton/: builder.rs  generate.rs  mod.rs  serializer.rs
src/fast_automaton/analyze/: cardinality.rs  equivalence.rs  length.rs  mod.rs  subset.rs
src/fast_automaton/condition/: converter.rs  mod.rs
src/fast_automaton/condition/fast_bit_vec/: mod.rs
src/fast_automaton/convert/: mod.rs
src/fast_automaton/convert/to_regex/: mod.rs  shapes.rs  transform.rs
src/fast_automaton/convert/to_regex/builder/: mod.rs  scc.rs
src/fast_automaton/convert/to_regex_2/: mod.rs  transform.rs
src/fast_automaton/convert/to_regex_2/builder/: mod.rs  scc.rs
src/fast_automaton/operation/: alternation.rs  concatenate.rs  determinize.rs  intersection.rs  mod.rs  subtraction.rs
src/fast_automaton/spanning_set/: mod.rs
src/regex/: builder.rs  mod.rs  serializer.rs
src/regex/analyze/: affixes.rs  mod.rs  number_of_states.rs
src/regex/operation/: concat.rs  mod.rs  simplify.rs  union.rs
src/tokenizer/: embed_automaton.rs  embed_regex.rs  embed_regex_operations.rs  mod.rs  range_tokenizer.rs
src/tokenizer/token/: automaton_token.rs  mod.rs  range_token.rs  regex_operations_token.rs  regex_token.rs
src/used_bases/: mod.rs
tests/: integration_tests.rs
tests/data/: regex.txt
