[package]
name = "regexsolver"
version = "0.3.1"
edition = "2021"
authors = ["Alexandre van Beurden"]
repository = "https://github.com/RegexSolver/regexsolver"
license = "MIT"
keywords = ["automaton", "intersection", "union", "difference", "regex"]
description = "Manipulate regex and automaton as if they were sets."
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
ciborium = { version = "0.2.2", optional = true }
z85 = { version = "3.0.5", optional = true }
aes-gcm-siv = { version = "0.11.1", optional = true }
sha2 = { version = "0.10.8", optional = true }
flate2 = { version = "1.0.30", features = [
    "zlib-ng",
], default-features = false, optional = true }
nohash-hasher = "0.2"
ahash = "0.8.11"
log = "0.4.21"
rand = "0.8.5"
lazy_static = "1.4.0"
regex = "1.10.3"
regex-syntax = "0.8.5"
regex-charclass = { version = "1.0.3" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11.3"
serde_json = "1.0.114"


[features]
default = ["serde"]
serde = [
    "regex-charclass/serde",
    "dep:serde",
    "dep:ciborium",
    "dep:z85",
    "dep:aes-gcm-siv",
    "dep:sha2",
    "dep:flate2",
]

[[bench]]
name = "my_benchmark"
harness = false